Resolve responsive design bug on mobile devices.

--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -109,14 +109,14 @@ main {
   color: var(--primary-tint-color);
   text-shadow: -0.2333rem 0 var(--border-color), 0 0.2333rem var(--border-color),
     0.2333rem 0 var(--border-color), 0 -0.2333rem var(--border-color);
-  font-size: 5rem;
+  font-size: 3.333rem;
   line-height: 1rem;
   width: 100%;
 }
 .subheader,
 .pi {
-  font-size: 2rem;
-  line-height: 2.333rem;
+  font-size: 1.333rem;
+  line-height: 1.333rem;
   font-weight: normal;
 }
 .subheader__tint {
@@ -128,12 +128,12 @@ p,
 .pi {
   max-width: 1333px;
   margin: 0 auto;
-  font-size: 3rem;
+  font-size: 1rem;
   font-weight: 500;
 }
 
 .pi {
-  font-size: 4rem;
+  font-size: 1.333rem;
 }
 
 code {
@@ -153,6 +153,10 @@ a:hover {
   cursor: pointer;
 }
 
+h2 {
+  font-size: 2.333rem;
+  line-height: 1rem;
+}
 /* Mobile */
 @media screen and (max-width: 820px) {
   .container {
@@ -166,10 +170,10 @@ a:hover {
 
   .header {
     color: var(--primary-tint-color);
-    font-size: 3rem;
+    font-size: 2.333rem;
   }
   .subheader {
-    font-size: 1.333rem;
+    font-size: 1.111rem;
   }
   .subheader__tint {
     color: var(--secondary-tint-color);
@@ -177,10 +181,14 @@ a:hover {
   }
 
   p {
-    font-size: 2.333rem;
+    font-size: 1rem;
   }
   .pi {
-    font-size: 3rem;
+    font-size: 1.222rem;
+  }
+
+  h2 {
+    font-size: 1.667rem;
   }
 
   code {
@@ -202,6 +210,11 @@ a:hover {
 
   .subheader,
   .pi {
+    font-size: 1rem;
+  }
+
+  
+  h2 {
     font-size: 1.333rem;
   }
 }
